# advent-of-code

./: LICENSE  pyproject.toml
2022/: day1_1.py
2023/: day_1.ipynb  day_2.ipynb
2023/day_1/: day_1.ipynb  day_1.py
2024/: day1.py  day1_1.py  day2.py  day3.py
