[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["manelpardo <manelpardofernandez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.16.0"
requests = "^2.32.3"
pyarrow = "^18.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
